# crafting-interpreters

cpplox/: 1.lox  CMakeLists.txt  NOTES.md  README.md  ast_generator.py  ast_printer.h  callable.cc  callable.h  environment.h  error.h  expr.gen.h  expr.h  expr.src.h  expr.tpl.h  interpreter.h  lox.cc  lox.h  main.cc  parser.h  resolver.h  return.h  scanner.h  stmt.gen.h  stmt.h  stmt.src.h  token.cc  token.h  value.cc  value.h  value_test.cc
cpplox/testcases/: benchmark1.lox  benchmark2.lox  bytecode.lox  fib.lox  test.lox
cpplox/utils/: string_format.h
cpplox/vm/: chunk.h  clock.cc  clock.h  compiler.h  config.h  debug.cc  debug.h  object.cc  object.h  object_manager.cc  object_manager.h  table.cc  table.h  value.cc  value.h  vm.h
tree-sitter-lox/: Cargo.toml  README.md  grammar.js  package.json
tree-sitter-lox/bindings/rust/: lib.rs
tree-sitter-lox/queries/: highlights.scm
tree-sitter-lox/src/: grammar.json  node-types.json  parser.c
tree-sitter-lox/test/corpus/: expressions.txt
